# ropecon-2022

./: .gitignore  analysis.ipynb  analyysi.ipynb  pyproject.toml  read_data.py
