[tool.poetry]
name = "ropecon-2022"
version = "0.1.0"
description = ""
authors = ["Olli-Pekka Tikkasalo <optikkanen@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
numpy = "^1.23.2"
scipy = "^1.9.1"
pandas = "^1.4.4"
scikit-learn = "^1.1.2"
matplotlib = "^3.5.3"
jupyter = "^1.0.0"
ipympl = "^0.9.2"
ipykernel = "^6.15.2"
requests = "^2.28.1"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
